@@ -1,13 +1,14 @@
 FROM gradle:7.2.0-jdk17 AS build
 
 COPY . .
+RUN clean build -x test
 
 FROM openjdk:17.0.1-jdk-slim
 
 EXPOSE 8080
 
-RUN mkdir /app
 
-COPY --from=build /build/libs/*.jar
 
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/ASSIGNMENSINGALARITY.jar"]
+COPY --from=build /build/libs/*.jar ASSIGNMENTSINGALARITY-0.0.1-SNAPSHOT-plain.jar
+
+ENTRYPOINT ["java","-jar","ASSIGNMENTSINGALARITY-0.0.1-SNAPSHOT-plain.jar"]
